add translation for status and date

--- a/Client/src/assets/i18n/en.json
+++ b/Client/src/assets/i18n/en.json
@@ -16,7 +16,9 @@
         "CREDITORACCOUNTNUMBER": "Creditor Account Number",
         "CREDITORBANKID": "Creditor BankId",
         "AMOUNT": "Amount",
-        "TRANSACTIONID": "Transaction Id"
+        "TRANSACTIONID": "Transaction Id",
+        "STATUS": "Status",
+        "DATE": "Modified"
     },
     "TIME": {
         "LOADING": "Loading"
